syntax = "proto3";

package auction;

option go_package = "github.com/yourusername/auction-system/api/proto/auction";

service AuctionService {
  rpc GetAuctionByID(GetAuctionByIDRequest) returns (GetAuctionByIDResponse);
  rpc CloseAuction(CloseAuctionRequest) returns (CloseAuctionResponse);
}

message Auction {
  int64 id = 1;
  int64 lot_id = 2;
  string status = 3; // "OPEN", "CLOSED"
  int64 winner_id = 4;
  double final_price = 5;
  string auction_start = 6; // ISO8601 datetime format
  string auction_end = 7;   // ISO8601 datetime format
}

message GetAuctionByIDRequest {
  int64 id = 1;
}

message GetAuctionByIDResponse {
  Auction auction = 1;
}

message CloseAuctionRequest {
  int64 id = 1;
}

message CloseAuctionResponse {
  Auction auction = 1;
}
